Homepage updates: * add Masterclass component/section on homepage * fix alignment issue with Presets section on homepage

--- a/src/components/PresetsHP/PresetsHP.css
+++ b/src/components/PresetsHP/PresetsHP.css
@@ -1,39 +1,34 @@
-.presets-hp .upper-container {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    gap: 3rem 3rem;
-    align-items: center;
-    margin-top: 5rem;
-}
-
-.image-container {
-    width: 100%;
-    height: 400px;
-    overflow: hidden;
-    justify-self: end;
-}
-
-.upper-container .image-container {
-    display: flex;
-    align-items: center;
+.presets-hp {
+    margin: 8rem 0;
 }
 
 .presets-hp img {
     width: 100%;
-}
-
-.upper-container {
-    margin: 1.5rem 0;
-}
-
-.bottom-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    align-items: center;
-    gap: 3rem 3rem;
-    margin-bottom: 5rem;
+    height: 100%;
+    object-fit: cover;
 }
 
 .shop-presets-btn {
     font-size: 1.25rem;
 }
+
+/* Presets v2 */
+.presets-hp .grid-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr 1fr;
+    gap: 1rem 1rem;
+}
+
+.presets-hp .grid-text {
+    grid-column: span 2;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+}
+
+.presets-hp .grid-item {
+    height: 400px;
+    /* padding: 1rem; */
+}
+
